--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@testing-library/react": "^8.0.1",
+    "jest-dom": "^3.5.0"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
